objects/simplesurvey__Simple_Survey_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>simplesurvey__Bypass_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Checkbox_Picklist_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Picklist Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Contact_Survey_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to enable a custom Case trigger from the extension package which will set a custom field on the contact labeled &quot;Survey_Last_Requested_On__c&quot;.</description>
        <label>Contact Survey Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Duplicate_Check__c</fullName>
        <label>Duplicate Check (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Horizontal_Checkboxes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Horizontal Checkboxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Horizontal_Radios__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Horizontal Radios</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Radio_Picklist_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Radio Picklist Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Rate_1_IMG__c</fullName>
        <label>Survey Rate 1 IMG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Rate_2_IMG__c</fullName>
        <label>Survey Rate 2 IMG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Rate_3_IMG__c</fullName>
        <label>Survey Rate 3 IMG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Site_Logo__c</fullName>
        <label>Survey Site Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simplesurvey__Survey_Site_URL__c</fullName>
        <label>Survey Site URL</label>
        <type>Url</type>
    </fields>
    <label>Simple Survey Setting</label>
</CustomObject>